style: resolve the issue of CMDK dialog blurring caused by transform (#76)

--- a/src/components/common/search-bar/cmdk.css
+++ b/src/components/common/search-bar/cmdk.css
@@ -34,7 +34,8 @@
     z-index: 999;
     left: 50%;
     top: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    /* transform: translateX(-50%) translateY(-50%); */
+    transform: translate(round(-50%, 1px), round(-50%, 1px));
 }
 
 [cmdk-dialog] {
